--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Метрика</title>
-
+    <link rel="icon" href="resources/Favicon.png" type="image/png" />
     <link rel="stylesheet" href="reset.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +17,9 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <!-- <div class="nav-section">
+    <!--
+
+<div class="nav-section">
       <a class="logo-link" href="#">
         <img
           class="logo"
@@ -31,7 +33,10 @@
         <a href="#services" class="nav-link">УСЛУГИ</a>
         <a href="#contacts" class="nav-link">КОНТАКТЫ</a>
       </div>
-    </div> -->
+    </div>
+
+    -->
+
     <div class="container">
       <div class="intro">
         <h1>Современные и стильные интерьеры для комфортной жизни</h1>
@@ -58,15 +63,15 @@
           <picture>
             <source
               media="(max-width: 1199px)"
-              srcset="resources/right_bank_tablet.png"
+              srcset="/resources/right_bank_tablet.png"
             />
             <source
               media="(max-width: 767px)"
-              srcset="resources/right_bank_mob.png"
+              srcset="/resources/right_bank_mob.png"
             />
             <img
               class="project_img"
-              src="resources/red_sofa.png"
+              src="/resources/red_sofa.png"
               alt="Красный диван"
             />
           </picture>
@@ -77,15 +82,15 @@
           <picture>
             <source
               media="(max-width: 1199px)"
-              srcset="resources/norwegian_park_tablet.png"
+              srcset="/resources/norwegian_park_tablet.png"
             />
             <source
               media="(max-width: 767px)"
-              srcset="resources/norwegian_park_mob.png"
+              srcset="/resources/norwegian_park_mob.png"
             />
             <img
               class="project_img"
-              src="resources/norwegian_park.png"
+              src="/resources/norwegian_park.png"
               alt="Гостиная"
             />
           </picture>
@@ -96,15 +101,15 @@
           <picture>
             <source
               media="(max-width: 1199px)"
-              srcset="resources/pine_lakes_tablet.png"
+              srcset="/resources/pine_lakes_tablet.png"
             />
             <source
               media="(max-width: 767px)"
-              srcset="resources/pine_lakes_mob.png"
+              srcset="/resources/pine_lakes_mob.png"
             />
             <img
               class="project_img"
-              src="resources/pine_lakes.png"
+              src="/resources/pine_lakes.png"
               alt="Столовая"
             />
           </picture>
@@ -119,34 +124,34 @@
     </div>
     <div class="services_wrapper">
       <div class="container">
-        <h4>УСЛУГИ</h4>
+        <h3 class="services_heading">УСЛУГИ</h3>
         <div id="services" class="services">
           <div class="service_item">
             <div class="item_price">
               <p class="label">от 2500₽/м²</p>
             </div>
-            <img class="item_img" src="resources/layout.png" alt="Карандаш" />
+            <img class="item_img" src="/resources/layout.png" alt="Карандаш" />
             <p class="item_name">Планировочное решение</p>
           </div>
           <div class="service_item">
             <div class="item_price">
               <p class="label">от 3000₽/м²</p>
             </div>
-            <img class="item_img" src="resources/design.png" alt="Палитра" />
+            <img class="item_img" src="/resources/design.png" alt="Палитра" />
             <p class="item_name">Дизайн-проект</p>
           </div>
           <div class="service_item">
             <div class="item_price">
               <p class="label">от 30 000₽/мес</p>
             </div>
-            <img class="item_img" src="resources/control.png" alt="Чертеж" />
+            <img class="item_img" src="/resources/control.png" alt="Чертеж" />
             <p class="item_name">Авторский надзор</p>
           </div>
           <div class="service_item">
             <div class="item_price">
               <p class="label">5% от стоимости</p>
             </div>
-            <img class="item_img" src="resources/equipment.png" alt="Склад" />
+            <img class="item_img" src="/resources/equipment.png" alt="Склад" />
             <p class="item_name">Комплектация</p>
           </div>
         </div>
@@ -156,7 +161,7 @@
 
     <div class="reviews_wrapper">
       <div class="container">
-        <h6>ОТЗЫВЫ</h6>
+        <h3>ОТЗЫВЫ</h3>
         <div class="reviews">
           <div class="review">
             <p class="review_name">Ксения, проект 65 кв.м.</p>
@@ -175,7 +180,7 @@
             </p>
           </div>
           <div class="review">
-            <h6 class="review_name">Регина, проект 89 кв.м.</h6>
+            <p class="review_name">Регина, проект 89 кв.м.</p>
             <p class="review_content">
               Спасибо большое за такой классный проект! Все стильно, круто,
               продумано! Очень приятно было с вами работать! Спасибо, что
@@ -190,7 +195,7 @@
             </p>
           </div>
           <div class="review">
-            <h6 class="review_name">Яна, проект 120 кв.м.</h6>
+            <p class="review_name">Яна, проект 120 кв.м.</p>
             <p class="review_content">
               Хотелось бы сказать большое спасибо за проделанную работу! В
               задачу Марины входила разработка дизайн-проекта в минимальные
@@ -213,11 +218,13 @@
 
     <!-- <div class="gallery_wrapper">
       <div class="gallery">
+        
+
         <p class="bedroom">Проект Двухкомнaтной квартиры в ЖК Лесной Пейзаж</p>
       </div>
       </div>
       <div id="contacts" class="contacts_wrapper">
-      <h5>КОНТАКТЫ</h5>
+      <h4>КОНТАКТЫ</h4>
       <p class="phone_number">
         <a href="tel:+7 935 895-45-35" class="cellphone">+7 935 895-45-35</a>
       </p>
