--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
           <picture>
             <source
               media="(max-width: 1199px)"
-              srcset="/resources/right_bank_tablet.png"
+              srcset="resources/right_bank_tablet.png"
             />
             <source
               media="(max-width: 767px)"
-              srcset="/resources/right_bank_mob.png"
+              srcset="resources/right_bank_mob.png"
             />
             <img
               class="project_img"
-              src="/resources/red_sofa.png"
+              src="resources/red_sofa.png"
               alt="Красный диван"
             />
           </picture>
@@ -82,15 +82,15 @@
           <picture>
             <source
               media="(max-width: 1199px)"
-              srcset="/resources/norwegian_park_tablet.png"
+              srcset="resources/norwegian_park_tablet.png"
             />
             <source
               media="(max-width: 767px)"
-              srcset="/resources/norwegian_park_mob.png"
+              srcset="resources/norwegian_park_mob.png"
             />
             <img
               class="project_img"
-              src="/resources/norwegian_park.png"
+              src="resources/norwegian_park.png"
               alt="Гостиная"
             />
           </picture>
@@ -109,7 +109,7 @@
             />
             <img
               class="project_img"
-              src="/resources/pine_lakes.png"
+              src="resources/pine_lakes.png"
               alt="Столовая"
             />
           </picture>
@@ -130,28 +130,28 @@
             <div class="item_price">
               <p class="label">от 2500₽/м²</p>
             </div>
-            <img class="item_img" src="/resources/layout.png" alt="Карандаш" />
+            <img class="item_img" src="resources/layout.png" alt="Карандаш" />
             <p class="item_name">Планировочное решение</p>
           </div>
           <div class="service_item">
             <div class="item_price">
               <p class="label">от 3000₽/м²</p>
             </div>
-            <img class="item_img" src="/resources/design.png" alt="Палитра" />
+            <img class="item_img" src="resources/design.png" alt="Палитра" />
             <p class="item_name">Дизайн-проект</p>
           </div>
           <div class="service_item">
             <div class="item_price">
               <p class="label">от 30 000₽/мес</p>
             </div>
-            <img class="item_img" src="/resources/control.png" alt="Чертеж" />
+            <img class="item_img" src="resources/control.png" alt="Чертеж" />
             <p class="item_name">Авторский надзор</p>
           </div>
           <div class="service_item">
             <div class="item_price">
               <p class="label">5% от стоимости</p>
             </div>
-            <img class="item_img" src="/resources/equipment.png" alt="Склад" />
+            <img class="item_img" src="resources/equipment.png" alt="Склад" />
             <p class="item_name">Комплектация</p>
           </div>
         </div>
