--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Метрика</title>
-    <link rel="icon" href="resources/Favicon.png" type="image/png" />
+    <link rel="icon" href="Favicon.png" type="image/png" />
     <link rel="stylesheet" href="reset.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
