--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
               </p>
             </div>
           </div>
-          <div class="gallery__controls-wrapper">
-            <div class="container">
+          div class="container">
+            <div class="gallery__controls">
               <button class="gallery__control-prev"></button>
               <button class="gallery__control-next"></button>
             </div>
