--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
               </p>
             </div>
           </div>
-          div class="container">
+          <div class="container">
             <div class="gallery__controls">
               <button class="gallery__control-prev"></button>
               <button class="gallery__control-next"></button>
