--- a/index.html
+++ b/index.html
@@ -269,10 +269,12 @@
               </p>
             </div>
           </div>
-          <div class="container">
-            <div class="gallery__controls">
-              <button class="gallery__control-prev"></button>
-              <button class="gallery__control-next"></button>
+          <div class="gallery__controls_wrapper">
+            <div class="container">
+              <div class="gallery__controls">
+                <button class="gallery__control-prev"></button>
+                <button class="gallery__control-next"></button>
+              </div>
             </div>
           </div>
         </div>
