--- a/index.html
+++ b/index.html
@@ -281,32 +281,33 @@
       </div>
     </section>
     <script src="script/gallery.js"></script>
-
-    <!--  <div id="contacts" class="contacts_wrapper">
-      <h4>КОНТАКТЫ</h4>
-      <p class="phone_number">
-        <a href="tel:+7 935 895-45-35" class="cellphone">+7 935 895-45-35</a>
-      </p>
-      <p class="e-mail">
-        <a href="mailto:hello@mail.com" class="mail">hello@mail.com</a>
-      </p>
-    <div>
-    </div>
-      <footer>
-        <div class="links_wrapper">
-          <a href="#about" class="link">О НАС</a>
-          <a href="#projects" class="link">ПРОЕКТЫ</a>
-          <a href="#services" class="link">УСЛУГИ</a>
-          <a href="contacts" class="link">КОНТАКТЫ</a>
+ <div id="contacts" class="contacts_wrapper">
+      <div class="container">
+        <h2>КОНТАКТЫ</h2>
+        <div class="contacts__block">
+          <a class="contacts__phone" href="tel:+7 935 895-45-35"
+            >+7 935 895-45-35</a
+          >
+          <div class="contacts__email">
+            <a
+              class="contacts__link"
+              target="_blank"
+              href="https://t.me/DyachenkoIrina"
+              >DyachenkoIrina</a
+            >
+          </div>
         </div>
-        <p class="design_studio">cтудия дизайна интерьера Метрика — 2023</p>
-      </footer>
-    </div> 
-  </body> 
-</html>
+      </div>
     </div>
-  </body>
-</html>
--->
+
+    <footer>
+      <div class="links_wrapper">
+        <a href="#about" class="link">О НАС</a>
+        <a href="#projects" class="link">ПРОЕКТЫ</a>
+        <a href="#services" class="link">УСЛУГИ</a>
+        <a href="contacts" class="link">КОНТАКТЫ</a>
+      </div>
+      <p class="design_studio">cтудия дизайна интерьера Метрика — 2023</p>
+    </footer>
   </body>
 </html>
