--- a/index.html
+++ b/index.html
@@ -330,7 +330,6 @@
         </div>
       </div>
     </section>
-    <script src="script/gallery.js"></script>
  <div id="contacts" class="contacts_wrapper">
       <div class="container">
         <h2>КОНТАКТЫ</h2>
@@ -359,5 +358,8 @@
       </div>
       <p class="design_studio">cтудия дизайна интерьера Метрика — 2023</p>
     </footer>
+    <script src="script/gallery.js"></script>
+    <script src="script/burger.js"></script>
+    <script src="script/popup.js"></script>
   </body>
 </html>
