--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
           Заполните форму, мы свяжемся <br />
           с вами в течение суток
         </p>
-        <div class="input__wrapper">
+       <div class="input__wrapper">
           <input class="input" type="text" placeholder="Имя" />
-          <input class="input" type="text" placeholder="Электронная почта" />
-          <input class="input" type="text" placeholder="Номер телефона" />
+          <input class="input" type="email" placeholder="Электронная почта" />
+          <input class="input" type="tel" placeholder="Номер телефона" />
         </div>
         <div class="popup__container">
           <div class="popup__btn_wrapper">
